cleaning EDA code

--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -81,11 +81,11 @@
    "source": [
     "## Cardinality of features\n",
     "\n",
-    "* ad is clicked only in about 20% of samples\n",
     "* 7 features have only one unique value (useless)\n",
+    "* 8 features and label are binary\n",
     "* feature50 highest cardinality (cca. 600K unique values in 1.5M samples)\n",
     "* features 53, 52, 60, 33 also high cardinality (250K - 300K unique values)\n",
-    "*"
+    "* 20 features have more than 1K unique values"
    ],
    "metadata": {
     "collapsed": false,
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
@@ -259,7 +259,6 @@
     "plt.figure(figsize=(10, 5))\n",
     "plt.barh(df_categorical.nunique().sort_values(ascending=False).index[:10],\n",
     "        df_categorical.nunique().sort_values(ascending=False).values[:10])\n",
-    "# reverse y axis\n",
     "plt.gca().invert_yaxis()\n",
     "plt.ylabel('Feature')\n",
     "plt.xlabel('Number of unique values')\n",
@@ -278,10 +277,12 @@
    "source": [
     "## Distribution of values in features, dominant values, sparsity\n",
     "\n",
-    "* 13 features have a very dominant value (appears in more than 90% of samples)\n",
-    "* 31 features have a dominant value (appears in more than 75% of samples)\n",
-    "* 81-89 very similar distribution of values\n",
-    "* 2, 3, 20 also similar distribution of values\n",
+    "* ad is clicked only in about 20% of samples\n",
+    "* 13 features have a very dominant value (appears in more than 90% of samples) - not counting one-unique-value features\n",
+    "* 31 features have a dominant value (appears in more than 75% of samples) - not counting one-unique-value features\n",
+    "* guess is that dominant values represent None value (just coded as categorical value)\n",
+    "* features 81-89 very similar distribution of values\n",
+    "* features 2, 3, 20 also similar distribution of values\n",
     "* all binary features unbalanced (cca 80-20)\n",
     "*\n"
    ],
@@ -466,8 +467,8 @@
    "source": [
     "## Correlation between features\n",
     "\n",
-    "* two highly correlateed groups o features\n",
-    "    * features 73-80 (however, not correlated to label)\n",
+    "* two highly (almost perfectly) correlated groups o features\n",
+    "    * features 73-80 (however, not correlated to label or any other feature)\n",
     "    * features 81-89(91) -> slight negative correlation to label, also slight correlation to some other features (14, 22, 32)\n",
     "* few features correlated in a pair\n",
     "    * 8 & 9\n",
@@ -489,21 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
       "text/plain": "                  info_click_valid  feature0  feature1  feature2  feature3  \\\ninfo_click_valid          1.000000 -0.034240 -0.017278 -0.107692 -0.072113   \nfeature0                 -0.034240  1.000000  0.158561  0.088378  0.121815   \nfeature1                 -0.017278  0.158561  1.000000  0.515882  0.659777   \nfeature2                 -0.107692  0.088378  0.515882  1.000000  0.765762   \nfeature3                 -0.072113  0.121815  0.659777  0.765762  1.000000   \n...                            ...       ...       ...       ...       ...   \nfeature95                      NaN       NaN       NaN       NaN       NaN   \nfeature96                      NaN       NaN       NaN       NaN       NaN   \nfeature97                      NaN       NaN       NaN       NaN       NaN   \nfeature98                 1.000000 -0.034240 -0.017278 -0.107692 -0.072113   \nfeature99                 1.000000 -0.034240 -0.017278 -0.107692 -0.072113   \n\n                  feature4  feature5  feature6  feature7  feature8  ...  \\\ninfo_click_valid -0.033770  0.118010  0.009384 -0.003432 -0.051413  ...   \nfeature0          0.036260  0.018825  0.001122 -0.004496  0.064095  ...   \nfeature1         -0.125142  0.044952  0.019149  0.063864  0.329379  ...   \nfeature2         -0.031772 -0.074906 -0.008506  0.063047  0.341824  ...   \nfeature3         -0.059556  0.006450  0.000340  0.096857  0.387738  ...   \n...                    ...       ...       ...       ...       ...  ...   \nfeature95              NaN       NaN       NaN       NaN       NaN  ...   \nfeature96              NaN       NaN       NaN       NaN       NaN  ...   \nfeature97              NaN       NaN       NaN       NaN       NaN  ...   \nfeature98        -0.033770  0.118010  0.009384 -0.003432 -0.051413  ...   \nfeature99        -0.033770  0.118010  0.009384 -0.003432 -0.051413  ...   \n\n                  feature90  feature91  feature92  feature93  feature94  \\\ninfo_click_valid  -0.130834  -0.129224        NaN        NaN        NaN   \nfeature0           0.040139   0.037398        NaN        NaN        NaN   \nfeature1           0.028026   0.021026        NaN        NaN        NaN   \nfeature2           0.092674   0.092931        NaN        NaN        NaN   \nfeature3           0.077150   0.074672        NaN        NaN        NaN   \n...                     ...        ...        ...        ...        ...   \nfeature95               NaN        NaN        NaN        NaN        NaN   \nfeature96               NaN        NaN        NaN        NaN        NaN   \nfeature97               NaN        NaN        NaN        NaN        NaN   \nfeature98         -0.130834  -0.129224        NaN        NaN        NaN   \nfeature99         -0.130834  -0.129224        NaN        NaN        NaN   \n\n                  feature95  feature96  feature97  feature98  feature99  \ninfo_click_valid        NaN        NaN        NaN   1.000000   1.000000  \nfeature0                NaN        NaN        NaN  -0.034240  -0.034240  \nfeature1                NaN        NaN        NaN  -0.017278  -0.017278  \nfeature2                NaN        NaN        NaN  -0.107692  -0.107692  \nfeature3                NaN        NaN        NaN  -0.072113  -0.072113  \n...                     ...        ...        ...        ...        ...  \nfeature95               NaN        NaN        NaN        NaN        NaN  \nfeature96               NaN        NaN        NaN        NaN        NaN  \nfeature97               NaN        NaN        NaN        NaN        NaN  \nfeature98               NaN        NaN        NaN   1.000000   1.000000  \nfeature99               NaN        NaN        NaN   1.000000   1.000000  \n\n[101 rows x 101 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>info_click_valid</th>\n      <th>feature0</th>\n      <th>feature1</th>\n      <th>feature2</th>\n      <th>feature3</th>\n      <th>feature4</th>\n      <th>feature5</th>\n      <th>feature6</th>\n      <th>feature7</th>\n      <th>feature8</th>\n      <th>...</th>\n      <th>feature90</th>\n      <th>feature91</th>\n      <th>feature92</th>\n      <th>feature93</th>\n      <th>feature94</th>\n      <th>feature95</th>\n      <th>feature96</th>\n      <th>feature97</th>\n      <th>feature98</th>\n      <th>feature99</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>info_click_valid</th>\n      <td>1.000000</td>\n      <td>-0.034240</td>\n      <td>-0.017278</td>\n      <td>-0.107692</td>\n      <td>-0.072113</td>\n      <td>-0.033770</td>\n      <td>0.118010</td>\n      <td>0.009384</td>\n      <td>-0.003432</td>\n      <td>-0.051413</td>\n      <td>...</td>\n      <td>-0.130834</td>\n      <td>-0.129224</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>feature0</th>\n      <td>-0.034240</td>\n      <td>1.000000</td>\n      <td>0.158561</td>\n      <td>0.088378</td>\n      <td>0.121815</td>\n      <td>0.036260</td>\n      <td>0.018825</td>\n      <td>0.001122</td>\n      <td>-0.004496</td>\n      <td>0.064095</td>\n      <td>...</td>\n      <td>0.040139</td>\n      <td>0.037398</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>-0.034240</td>\n      <td>-0.034240</td>\n    </tr>\n    <tr>\n      <th>feature1</th>\n      <td>-0.017278</td>\n      <td>0.158561</td>\n      <td>1.000000</td>\n      <td>0.515882</td>\n      <td>0.659777</td>\n      <td>-0.125142</td>\n      <td>0.044952</td>\n      <td>0.019149</td>\n      <td>0.063864</td>\n      <td>0.329379</td>\n      <td>...</td>\n      <td>0.028026</td>\n      <td>0.021026</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>-0.017278</td>\n      <td>-0.017278</td>\n    </tr>\n    <tr>\n      <th>feature2</th>\n      <td>-0.107692</td>\n      <td>0.088378</td>\n      <td>0.515882</td>\n      <td>1.000000</td>\n      <td>0.765762</td>\n      <td>-0.031772</td>\n      <td>-0.074906</td>\n      <td>-0.008506</td>\n      <td>0.063047</td>\n      <td>0.341824</td>\n      <td>...</td>\n      <td>0.092674</td>\n      <td>0.092931</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>-0.107692</td>\n      <td>-0.107692</td>\n    </tr>\n    <tr>\n      <th>feature3</th>\n      <td>-0.072113</td>\n      <td>0.121815</td>\n      <td>0.659777</td>\n      <td>0.765762</td>\n      <td>1.000000</td>\n      <td>-0.059556</td>\n      <td>0.006450</td>\n      <td>0.000340</td>\n      <td>0.096857</td>\n      <td>0.387738</td>\n      <td>...</td>\n      <td>0.077150</td>\n      <td>0.074672</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>-0.072113</td>\n      <td>-0.072113</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>feature95</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>feature96</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>feature97</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>feature98</th>\n      <td>1.000000</td>\n      <td>-0.034240</td>\n      <td>-0.017278</td>\n      <td>-0.107692</td>\n      <td>-0.072113</td>\n      <td>-0.033770</td>\n      <td>0.118010</td>\n      <td>0.009384</td>\n      <td>-0.003432</td>\n      <td>-0.051413</td>\n      <td>...</td>\n      <td>-0.130834</td>\n      <td>-0.129224</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>feature99</th>\n      <td>1.000000</td>\n      <td>-0.034240</td>\n      <td>-0.017278</td>\n      <td>-0.107692</td>\n      <td>-0.072113</td>\n      <td>-0.033770</td>\n      <td>0.118010</td>\n      <td>0.009384</td>\n      <td>-0.003432</td>\n      <td>-0.051413</td>\n      <td>...</td>\n      <td>-0.130834</td>\n      <td>-0.129224</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>101 rows × 101 columns</p>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# get correlation matrix of features\n",
-    "corr = df.apply(lambda x : pd.factorize(x)[0]).corr(method='pearson', min_periods=1)\n",
+    "corr = df.apply(lambda x : pd.factorize(x)[0]).corr(method='pearson')\n",
     "corr"
    ],
    "metadata": {
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
