Pipeline clean&fix major update
- rank_eval pipeline rewritten & documented
- ground truth extraction updated to follow new pipeline
- mutual info score output updated to follow new pipeline
- requirements.txt updated with ranking algos packages
- writing interim report on EDA

--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -133,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "feature70    1\nfeature92    1\nfeature93    1\nfeature94    1\nfeature95    1\nfeature96    1\nfeature97    1\ndtype: int64"
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "info_click_valid    2\nfeature4            2\nfeature5            2\nfeature6            2\nfeature14           2\nfeature32           2\nfeature90           2\nfeature98           2\nfeature99           2\ndtype: int64"
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "info_click_valid    0\nfeature0            0\nfeature1            0\nfeature2            0\nfeature3            0\n                   ..\nfeature95           0\nfeature96           0\nfeature97           0\nfeature98           0\nfeature99           0\nLength: 101, dtype: int64"
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,13 +198,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "feature50    647413\nfeature53    288986\nfeature52    261178\nfeature60    259917\nfeature33    250802\n              ...  \nfeature93         1\nfeature94         1\nfeature95         1\nfeature96         1\nfeature97         1\nLength: 101, dtype: int64"
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -239,6 +239,7 @@
     "plt.ylabel('Feature')\n",
     "plt.xlabel('Number of unique values')\n",
     "plt.title('Top 10 features with most unique values')\n",
+    "plt.savefig('img/top10_features_unique_values.png', dpi=400, bbox_inches='tight')\n",
     "plt.show()\n"
    ],
    "metadata": {
